--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
+    "encoding": "^0.1.13",
     "express": "^4.17.3",
     "netlify-lambda": "^2.0.15",
     "node-fetch": "2.6.7",
