--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "encoding": "^0.1.13",
     "express": "^4.17.3",
     "netlify-lambda": "^2.0.15",
-    "node-fetch": "2.6.7",
+    "request": "^2.81.0",
     "serverless-http": "^2.7.0"
   },
   "scripts": {
